# toolsz

./: 404.html  README.md  dff.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_build.sh  run_test.sh  setup.py  update_docs.sh
docs/: file.md  filetool.md  index.md  re_.md  reference.md  system_.md  time_.md  tutorials.md  use_base.md  variable_.md  未命名.md
file/: index.html
filetool/: index.html
re_/: index.html
search/: search_index.json
src/: architecture.py
src/person_bank_analyse/: main.py
src/person_bank_analyse/cli/: __init__.py  cli_app.py  commands.py  states.py
src/person_bank_analyse/data/: __init__.py  storage.py
src/person_bank_analyse/domain/: __init__.py  models.py
src/person_bank_analyse/patterns/: __init__.py  observer.py
src/person_bank_analyse/services/: __init__.py  analysis.py  classification.py  data_import.py  insight_service.py  interaction.py  report_generator.py
src/pylibz/: applescript.py  datastruct.py  designer.py  designer_ready.py  pandas_pandasai.py  pricing_data.csv  pricing_scraper.py  pyshark.py  sss.py  www.py  数据库.py
src/toolsz/: env.py  freedom_function.py
system_/: index.html
test/: test2.py
tests/: test.py  test2.py  test_.py
time_/: index.html
tools/: filetool.py
toolsz/: __init__.py  autogl.py  file_manager.py  filetool.py  generics.py  llama_index_functioncall.py  mcp_tools.py  meeting.py  python_lib.py  re_lib.py  sometool.py  speed.py  system_lib.py  time.py  train.py  variable.py  web_lib.py  work.py
use_base/: index.html
variable_/: index.html
(+18 files in other folders)
