[project]
name = "toolsz"
version = "0.1.5"
description = "负责工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dill>=0.3.9",
    "llama-index>=0.12.30",
    "lxml>=5.3.2",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "requests>=2.32.3",
    "setproctitle>=1.3.5",
    "setuptools>=78.1.0",
]
